@@ -20,6 +20,7 @@ Bugs fixed
 ----------
 
 * #7461: py domain: fails with IndexError for empty tuple in type annotation
+* #7418: std domain: :rst:role:`term` role could not match case-insensitively
 * #7461: autodoc: empty tuple in type annotation is not shown correctly
 * C++, fix spacing issue in east-const declarations.
 
